// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`address-taro Address: show custom 1`] = `
"[36m<body[39m
  [33mclass[39m=[32m"nut-overflow-hidden"[39m
[36m>[39m
  [36m<div>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-overlay"[39m
      [33mstyle[39m=[32m"--nutui-overlay-zIndex: 1000;"[39m
    [36m/>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-popup nut-popup-round nut-popup-bottom"[39m
      [33mstyle[39m=[32m"overflow-y: hidden; z-index: 1000;"[39m
    [36m>[39m
      [36m<taro-view-core[39m
        [33mclass[39m=[32m"nut-popup-title"[39m
      [36m>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-left"[39m
        [36m/>[39m
        [36m<div[39m
          [33mclass[39m=[32m"nut-popup-title-title"[39m
        [36m>[39m
          [0m选择地址[0m
        [36m</div>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-right nut-popup-title-right-top-right"[39m
        [36m>[39m
          [36m<i[39m
            [33mclass[39m=[32m" nut-icon nut-icon-Close "[39m
            [33mstyle[39m=[32m"background-color: currentColor; mask: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDI0IDEwMjQiPjxwYXRoIGZpbGw9IiMxQTFBMUEiIGQ9Ik04NjUuODMgOTI2LjE3YTQyLjY3IDQyLjY3IDAgMSAwIDYwLjM2LTYwLjM0TDU3Mi4zNSA1MTJsMzUzLjg0LTM1My44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNi02MC4zNEw1MTIgNDUxLjY3IDE1OC4xOSA5Ny44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNiA2MC4zNEw0NTEuNjcgNTEyIDk3LjgzIDg2NS44M2E0Mi42NyA0Mi42NyAwIDEgMCA2MC4zNCA2MC4zNEw1MTIgNTcyLjMzeiIvPjwvc3ZnPg==')  0 0/100% 100% no-repeat;"[39m
          [36m/>[39m
        [36m</taro-view-core>[39m
      [36m</taro-view-core>[39m
      [36m<div[39m
        [33mclass[39m=[32m"nut-cascader "[39m
      [36m>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-tabs nut-tabs-horizontal"[39m
        [36m>[39m
          [36m<taro-scroll-view-core[39m
            [33mclass[39m=[32m"nut-tabs-titles nut-tabs-titles-line nut-tabs-titles-scrollable taro-scroll-view__scroll-x"[39m
            [33menable-flex[39m=[32m"true"[39m
            [33mid[39m=[32m"nut-tabs-titles-1"[39m
            [33mscroll-left[39m=[32m"0"[39m
            [33mscroll-top[39m=[32m"0"[39m
            [33mscroll-with-animation[39m=[32m"false"[39m
            [33mscroll-x[39m=[32m"true"[39m
            [33mscroll-y[39m=[32m"false"[39m
            [33mshow-scrollbar[39m=[32m"false"[39m
          [36m>[39m
            [36m<taro-view-core[39m
              [33mclass[39m=[32m"nut-tabs-list"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"nut-tabs-titles-item nut-tabs-titles-item-active"[39m
              [36m>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"nut-tabs-titles-item-text"[39m
                [36m>[39m
                  [0m请选择[0m
                [36m</span>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"nut-tabs-titles-item-line"[39m
                [36m/>[39m
              [36m</div>[39m
            [36m</taro-view-core>[39m
          [36m</taro-scroll-view-core>[39m
          [36m<taro-view-core[39m
            [33mclass[39m=[32m"nut-tabs-content-wrap"[39m
          [36m>[39m
            [36m<taro-view-core[39m
              [33mclass[39m=[32m"nut-tabs-content"[39m
              [33mstyle[39m=[32m"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"nut-tabpane active"[39m
              [36m>[39m
                [36m<taro-scroll-view-core[39m
                  [33mclass[39m=[32m"nut-cascader-pane taro-scroll-view__scroll-y"[39m
                  [33mscroll-y[39m=[32m"true"[39m
                [36m>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m浙江[0m
                    [36m</div>[39m
                  [36m</div>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"disabled nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m湖南[0m
                    [36m</div>[39m
                  [36m</div>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m福建[0m
                    [36m</div>[39m
                  [36m</div>[39m
                [36m</taro-scroll-view-core>[39m
              [36m</div>[39m
            [36m</taro-view-core>[39m
          [36m</taro-view-core>[39m
        [36m</taro-view-core>[39m
      [36m</div>[39m
    [36m</taro-view-core>[39m
  [36m</div>[39m
[36m</body>[39m"
`;

exports[`address-taro Address: show custom 2`] = `
"[36m<body[39m
  [33mclass[39m=[32m"nut-overflow-hidden"[39m
[36m>[39m
  [36m<div>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-overlay"[39m
      [33mstyle[39m=[32m"--nutui-overlay-zIndex: 1000;"[39m
    [36m/>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-popup nut-popup-round nut-popup-bottom"[39m
      [33mstyle[39m=[32m"overflow-y: hidden; z-index: 1000;"[39m
    [36m>[39m
      [36m<taro-view-core[39m
        [33mclass[39m=[32m"nut-popup-title"[39m
      [36m>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-left"[39m
        [36m/>[39m
        [36m<div[39m
          [33mclass[39m=[32m"nut-popup-title-title"[39m
        [36m>[39m
          [0m选择地址[0m
        [36m</div>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-right nut-popup-title-right-top-right"[39m
        [36m>[39m
          [36m<i[39m
            [33mclass[39m=[32m" nut-icon nut-icon-Close "[39m
            [33mstyle[39m=[32m"background-color: currentColor; mask: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDI0IDEwMjQiPjxwYXRoIGZpbGw9IiMxQTFBMUEiIGQ9Ik04NjUuODMgOTI2LjE3YTQyLjY3IDQyLjY3IDAgMSAwIDYwLjM2LTYwLjM0TDU3Mi4zNSA1MTJsMzUzLjg0LTM1My44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNi02MC4zNEw1MTIgNDUxLjY3IDE1OC4xOSA5Ny44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNiA2MC4zNEw0NTEuNjcgNTEyIDk3LjgzIDg2NS44M2E0Mi42NyA0Mi42NyAwIDEgMCA2MC4zNCA2MC4zNEw1MTIgNTcyLjMzeiIvPjwvc3ZnPg==')  0 0/100% 100% no-repeat;"[39m
          [36m/>[39m
        [36m</taro-view-core>[39m
      [36m</taro-view-core>[39m
      [36m<div[39m
        [33mclass[39m=[32m"nut-cascader "[39m
      [36m>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-tabs nut-tabs-horizontal"[39m
        [36m>[39m
          [36m<taro-scroll-view-core[39m
            [33mclass[39m=[32m"nut-tabs-titles nut-tabs-titles-line nut-tabs-titles-scrollable taro-scroll-view__scroll-x"[39m
            [33menable-flex[39m=[32m"true"[39m
            [33mid[39m=[32m"nut-tabs-titles-1"[39m
            [33mscroll-left[39m=[32m"0"[39m
            [33mscroll-top[39m=[32m"0"[39m
            [33mscroll-with-animation[39m=[32m"false"[39m
            [33mscroll-x[39m=[32m"true"[39m
            [33mscroll-y[39m=[32m"false"[39m
            [33mshow-scrollbar[39m=[32m"false"[39m
          [36m>[39m
            [36m<taro-view-core[39m
              [33mclass[39m=[32m"nut-tabs-list"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"nut-tabs-titles-item nut-tabs-titles-item-active"[39m
              [36m>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"nut-tabs-titles-item-text"[39m
                [36m>[39m
                  [0m请选择[0m
                [36m</span>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"nut-tabs-titles-item-line"[39m
                [36m/>[39m
              [36m</div>[39m
            [36m</taro-view-core>[39m
          [36m</taro-scroll-view-core>[39m
          [36m<taro-view-core[39m
            [33mclass[39m=[32m"nut-tabs-content-wrap"[39m
          [36m>[39m
            [36m<taro-view-core[39m
              [33mclass[39m=[32m"nut-tabs-content"[39m
              [33mstyle[39m=[32m"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"nut-tabpane active"[39m
              [36m>[39m
                [36m<taro-scroll-view-core[39m
                  [33mclass[39m=[32m"nut-cascader-pane taro-scroll-view__scroll-y"[39m
                  [33mscroll-y[39m=[32m"true"[39m
                [36m>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m浙江[0m
                    [36m</div>[39m
                  [36m</div>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"disabled nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m湖南[0m
                    [36m</div>[39m
                  [36m</div>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m福建[0m
                    [36m</div>[39m
                  [36m</div>[39m
                [36m</taro-scroll-view-core>[39m
              [36m</div>[39m
            [36m</taro-view-core>[39m
          [36m</taro-view-core>[39m
        [36m</taro-view-core>[39m
      [36m</div>[39m
    [36m</taro-view-core>[39m
  [36m</div>[39m
  [36m<div>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-overlay"[39m
      [33mstyle[39m=[32m"--nutui-overlay-zIndex: 1000;"[39m
    [36m/>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-popup nut-popup-round nut-popup-bottom"[39m
      [33mstyle[39m=[32m"overflow-y: hidden; z-index: 1000;"[39m
    [36m>[39m
      [36m<taro-view-core[39m
        [33mclass[39m=[32m"nut-popup-title"[39m
      [36m>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-left"[39m
        [36m/>[39m
        [36m<div[39m
          [33mclass[39m=[32m"nut-popup-title-title"[39m
        [36m>[39m
          [0m选择地址[0m
        [36m</div>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-right nut-popup-title-right-top-right"[39m
        [36m>[39m
          [36m<i[39m
            [33mclass[39m=[32m" nut-icon nut-icon-Close "[39m
            [33mstyle[39m=[32m"background-color: currentColor; mask: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDI0IDEwMjQiPjxwYXRoIGZpbGw9IiMxQTFBMUEiIGQ9Ik04NjUuODMgOTI2LjE3YTQyLjY3IDQyLjY3IDAgMSAwIDYwLjM2LTYwLjM0TDU3Mi4zNSA1MTJsMzUzLjg0LTM1My44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNi02MC4zNEw1MTIgNDUxLjY3IDE1OC4xOSA5Ny44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNiA2MC4zNEw0NTEuNjcgNTEyIDk3LjgzIDg2NS44M2E0Mi42NyA0Mi42NyAwIDEgMCA2MC4zNCA2MC4zNEw1MTIgNTcyLjMzeiIvPjwvc3ZnPg==')  0 0/100% 100% no-repeat;"[39m
          [36m/>[39m
        [36m</taro-view-core>[39m
      [36m</taro-view-core>[39m
      [36m<div[39m
        [33mclass[39m=[32m"nut-cascader "[39m
      [36m>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-tabs nut-tabs-horizontal"[39m
        [36m>[39m
          [36m<taro-scroll-view-core[39m
            [33mclass[39m=[32m"nut-tabs-titles nut-tabs-titles-line nut-tabs-titles-scrollable taro-scroll-view__scroll-x"[39m
            [33menable-flex[39m=[32m"true"[39m
            [33mid[39m=[32m"nut-tabs-titles-4"[39m
            [33mscroll-left[39m=[32m"0"[39m
            [33mscroll-top[39m=[32m"0"[39m
            [33mscroll-with-animation[39m=[32m"false"[39m
            [33mscroll-x[39m=[32m"true"[39m
            [33mscroll-y[39m=[32m"false"[39m
            [33mshow-scrollbar[39m=[32m"false"[39m
          [36m>[39m
            [36m<taro-view-core[39m
              [33mclass[39m=[32m"nut-tabs-list"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"nut-tabs-titles-item nut-tabs-titles-item-active"[39m
              [36m>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"nut-tabs-titles-item-text"[39m
                [36m>[39m
                  [0m请选择[0m
                [36m</span>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"nut-tabs-titles-item-line"[39m
                [36m/>[39m
              [36m</div>[39m
            [36m</taro-view-core>[39m
          [36m</taro-scroll-view-core>[39m
          [36m<taro-view-core[39m
            [33mclass[39m=[32m"nut-tabs-content-wrap"[39m
          [36m>[39m
            [36m<taro-view-core[39m
              [33mclass[39m=[32m"nut-tabs-content"[39m
              [33mstyle[39m=[32m"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"nut-tabpane active"[39m
              [36m>[39m
                [36m<taro-scroll-view-core[39m
                  [33mclass[39m=[32m"nut-cascader-pane taro-scroll-view__scroll-y"[39m
                  [33mscroll-y[39m=[32m"true"[39m
                [36m>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m浙江[0m
                    [36m</div>[39m
                  [36m</div>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"disabled nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m湖南[0m
                    [36m</div>[39m
                  [36m</div>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m福建[0m
                    [36m</div>[39m
                  [36m</div>[39m
                [36m</taro-scroll-view-core>[39m
              [36m</div>[39m
            [36m</taro-view-core>[39m
          [36m</taro-view-core>[39m
        [36m</taro-view-core>[39m
      [36m</div>[39m
    [36m</taro-view-core>[39m
  [36m</div>[39m
[36m</body>[39m"
`;

exports[`address-taro Address: show exist 1`] = `
"[36m<body[39m
  [33mclass[39m=[32m"nut-overflow-hidden"[39m
[36m>[39m
  [36m<div>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-overlay"[39m
      [33mstyle[39m=[32m"--nutui-overlay-zIndex: 1000;"[39m
    [36m/>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-popup nut-popup-round nut-popup-bottom"[39m
      [33mstyle[39m=[32m"overflow-y: hidden; z-index: 1000;"[39m
    [36m>[39m
      [36m<taro-view-core[39m
        [33mclass[39m=[32m"nut-popup-title"[39m
      [36m>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-left"[39m
        [36m/>[39m
        [36m<div[39m
          [33mclass[39m=[32m"nut-popup-title-title"[39m
        [36m>[39m
          [0m选择地址[0m
        [36m</div>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-right nut-popup-title-right-top-right"[39m
        [36m>[39m
          [36m<i[39m
            [33mclass[39m=[32m" nut-icon nut-icon-Close "[39m
            [33mstyle[39m=[32m"background-color: currentColor; mask: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDI0IDEwMjQiPjxwYXRoIGZpbGw9IiMxQTFBMUEiIGQ9Ik04NjUuODMgOTI2LjE3YTQyLjY3IDQyLjY3IDAgMSAwIDYwLjM2LTYwLjM0TDU3Mi4zNSA1MTJsMzUzLjg0LTM1My44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNi02MC4zNEw1MTIgNDUxLjY3IDE1OC4xOSA5Ny44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNiA2MC4zNEw0NTEuNjcgNTEyIDk3LjgzIDg2NS44M2E0Mi42NyA0Mi42NyAwIDEgMCA2MC4zNCA2MC4zNEw1MTIgNTcyLjMzeiIvPjwvc3ZnPg==')  0 0/100% 100% no-repeat;"[39m
          [36m/>[39m
        [36m</taro-view-core>[39m
      [36m</taro-view-core>[39m
      [36m<div[39m
        [33mclass[39m=[32m"nut-cascader "[39m
      [36m>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-tabs nut-tabs-horizontal"[39m
        [36m>[39m
          [36m<taro-scroll-view-core[39m
            [33mclass[39m=[32m"nut-tabs-titles nut-tabs-titles-line nut-tabs-titles-scrollable taro-scroll-view__scroll-x"[39m
            [33menable-flex[39m=[32m"true"[39m
            [33mid[39m=[32m"nut-tabs-titles-1"[39m
            [33mscroll-left[39m=[32m"0"[39m
            [33mscroll-top[39m=[32m"0"[39m
            [33mscroll-with-animation[39m=[32m"false"[39m
            [33mscroll-x[39m=[32m"true"[39m
            [33mscroll-y[39m=[32m"false"[39m
            [33mshow-scrollbar[39m=[32m"false"[39m
          [36m>[39m
            [36m<taro-view-core[39m
              [33mclass[39m=[32m"nut-tabs-list"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"nut-tabs-titles-item nut-tabs-titles-item-active"[39m
              [36m>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"nut-tabs-titles-item-text"[39m
                [36m>[39m
                  [0m请选择[0m
                [36m</span>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"nut-tabs-titles-item-line"[39m
                [36m/>[39m
              [36m</div>[39m
            [36m</taro-view-core>[39m
          [36m</taro-scroll-view-core>[39m
          [36m<taro-view-core[39m
            [33mclass[39m=[32m"nut-tabs-content-wrap"[39m
          [36m>[39m
            [36m<taro-view-core[39m
              [33mclass[39m=[32m"nut-tabs-content"[39m
              [33mstyle[39m=[32m"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"nut-tabpane active"[39m
              [36m>[39m
                [36m<taro-scroll-view-core[39m
                  [33mclass[39m=[32m"nut-cascader-pane taro-scroll-view__scroll-y"[39m
                  [33mscroll-y[39m=[32m"true"[39m
                [36m>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m浙江[0m
                    [36m</div>[39m
                  [36m</div>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"disabled nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m湖南[0m
                    [36m</div>[39m
                  [36m</div>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m福建[0m
                    [36m</div>[39m
                  [36m</div>[39m
                [36m</taro-scroll-view-core>[39m
              [36m</div>[39m
            [36m</taro-view-core>[39m
          [36m</taro-view-core>[39m
        [36m</taro-view-core>[39m
      [36m</div>[39m
    [36m</taro-view-core>[39m
  [36m</div>[39m
  [36m<div>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-overlay"[39m
      [33mstyle[39m=[32m"--nutui-overlay-zIndex: 1000;"[39m
    [36m/>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-popup nut-popup-round nut-popup-bottom"[39m
      [33mstyle[39m=[32m"z-index: 1000;"[39m
    [36m>[39m
      [36m<taro-view-core[39m
        [33mclass[39m=[32m"nut-popup-title"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"nut-popup-title-title"[39m
        [36m>[39m
          [0m选择地址[0m
        [36m</div>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-right nut-popup-title-right-top-right"[39m
        [36m>[39m
          [36m<i[39m
            [33mclass[39m=[32m" nut-icon nut-icon-Close "[39m
            [33mstyle[39m=[32m"background-color: currentColor; mask: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDI0IDEwMjQiPjxwYXRoIGZpbGw9IiMxQTFBMUEiIGQ9Ik04NjUuODMgOTI2LjE3YTQyLjY3IDQyLjY3IDAgMSAwIDYwLjM2LTYwLjM0TDU3Mi4zNSA1MTJsMzUzLjg0LTM1My44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNi02MC4zNEw1MTIgNDUxLjY3IDE1OC4xOSA5Ny44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNiA2MC4zNEw0NTEuNjcgNTEyIDk3LjgzIDg2NS44M2E0Mi42NyA0Mi42NyAwIDEgMCA2MC4zNCA2MC4zNEw1MTIgNTcyLjMzeiIvPjwvc3ZnPg==')  0 0/100% 100% no-repeat;"[39m
          [36m/>[39m
        [36m</taro-view-core>[39m
      [36m</taro-view-core>[39m
      [36..."
`;

exports[`address-taro2 Address: show custom 1`] = `
"[36m<body[39m
  [33mclass[39m=[32m"nut-overflow-hidden"[39m
[36m>[39m
  [36m<div>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-overlay"[39m
      [33mstyle[39m=[32m"--nutui-overlay-zIndex: 1000;"[39m
    [36m/>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-popup nut-popup-round nut-popup-bottom"[39m
      [33mstyle[39m=[32m"overflow-y: hidden; z-index: 1000;"[39m
    [36m>[39m
      [36m<taro-view-core[39m
        [33mclass[39m=[32m"nut-popup-title"[39m
      [36m>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-left"[39m
        [36m/>[39m
        [36m<div[39m
          [33mclass[39m=[32m"nut-popup-title-title"[39m
        [36m>[39m
          [0m选择地址[0m
        [36m</div>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-right nut-popup-title-right-top-right"[39m
        [36m>[39m
          [36m<i[39m
            [33mclass[39m=[32m" nut-icon nut-icon-Close "[39m
            [33mstyle[39m=[32m"background-color: currentColor; mask: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDI0IDEwMjQiPjxwYXRoIGZpbGw9IiMxQTFBMUEiIGQ9Ik04NjUuODMgOTI2LjE3YTQyLjY3IDQyLjY3IDAgMSAwIDYwLjM2LTYwLjM0TDU3Mi4zNSA1MTJsMzUzLjg0LTM1My44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNi02MC4zNEw1MTIgNDUxLjY3IDE1OC4xOSA5Ny44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNiA2MC4zNEw0NTEuNjcgNTEyIDk3LjgzIDg2NS44M2E0Mi42NyA0Mi42NyAwIDEgMCA2MC4zNCA2MC4zNEw1MTIgNTcyLjMzeiIvPjwvc3ZnPg==')  0 0/100% 100% no-repeat;"[39m
          [36m/>[39m
        [36m</taro-view-core>[39m
      [36m</taro-view-core>[39m
      [36m<div[39m
        [33mclass[39m=[32m"nut-cascader "[39m
      [36m>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-tabs nut-tabs-horizontal"[39m
        [36m>[39m
          [36m<taro-scroll-view-core[39m
            [33mclass[39m=[32m"nut-tabs-titles nut-tabs-titles-line nut-tabs-titles-scrollable taro-scroll-view__scroll-x"[39m
            [33menable-flex[39m=[32m"true"[39m
            [33mid[39m=[32m"nut-tabs-titles-1"[39m
            [33mscroll-left[39m=[32m"0"[39m
            [33mscroll-top[39m=[32m"0"[39m
            [33mscroll-with-animation[39m=[32m"false"[39m
            [33mscroll-x[39m=[32m"true"[39m
            [33mscroll-y[39m=[32m"false"[39m
            [33mshow-scrollbar[39m=[32m"false"[39m
          [36m>[39m
            [36m<taro-view-core[39m
              [33mclass[39m=[32m"nut-tabs-list"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"nut-tabs-titles-item nut-tabs-titles-item-active"[39m
              [36m>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"nut-tabs-titles-item-text"[39m
                [36m>[39m
                  [0m请选择[0m
                [36m</span>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"nut-tabs-titles-item-line"[39m
                [36m/>[39m
              [36m</div>[39m
            [36m</taro-view-core>[39m
          [36m</taro-scroll-view-core>[39m
          [36m<taro-view-core[39m
            [33mclass[39m=[32m"nut-tabs-content-wrap"[39m
          [36m>[39m
            [36m<taro-view-core[39m
              [33mclass[39m=[32m"nut-tabs-content"[39m
              [33mstyle[39m=[32m"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"nut-tabpane active"[39m
              [36m>[39m
                [36m<taro-scroll-view-core[39m
                  [33mclass[39m=[32m"nut-cascader-pane taro-scroll-view__scroll-y"[39m
                  [33mscroll-y[39m=[32m"true"[39m
                [36m>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m浙江[0m
                    [36m</div>[39m
                  [36m</div>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"disabled nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m湖南[0m
                    [36m</div>[39m
                  [36m</div>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m福建[0m
                    [36m</div>[39m
                  [36m</div>[39m
                [36m</taro-scroll-view-core>[39m
              [36m</div>[39m
            [36m</taro-view-core>[39m
          [36m</taro-view-core>[39m
        [36m</taro-view-core>[39m
      [36m</div>[39m
    [36m</taro-view-core>[39m
  [36m</div>[39m
  [36m<div>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-overlay"[39m
      [33mstyle[39m=[32m"--nutui-overlay-zIndex: 1000;"[39m
    [36m/>[39m
    [36m<taro-view-core[39m
      [33mcatch-move[39m=[32m"true"[39m
      [33mclass[39m=[32m"nut-popup nut-popup-round nut-popup-bottom"[39m
      [33mstyle[39m=[32m"overflow-y: hidden; z-index: 1000;"[39m
    [36m>[39m
      [36m<taro-view-core[39m
        [33mclass[39m=[32m"nut-popup-title"[39m
      [36m>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-left"[39m
        [36m/>[39m
        [36m<div[39m
          [33mclass[39m=[32m"nut-popup-title-title"[39m
        [36m>[39m
          [0m选择地址[0m
        [36m</div>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-popup-title-right nut-popup-title-right-top-right"[39m
        [36m>[39m
          [36m<i[39m
            [33mclass[39m=[32m" nut-icon nut-icon-Close "[39m
            [33mstyle[39m=[32m"background-color: currentColor; mask: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAxMDI0IDEwMjQiPjxwYXRoIGZpbGw9IiMxQTFBMUEiIGQ9Ik04NjUuODMgOTI2LjE3YTQyLjY3IDQyLjY3IDAgMSAwIDYwLjM2LTYwLjM0TDU3Mi4zNSA1MTJsMzUzLjg0LTM1My44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNi02MC4zNEw1MTIgNDUxLjY3IDE1OC4xOSA5Ny44M2E0Mi42NyA0Mi42NyAwIDAgMC02MC4zNiA2MC4zNEw0NTEuNjcgNTEyIDk3LjgzIDg2NS44M2E0Mi42NyA0Mi42NyAwIDEgMCA2MC4zNCA2MC4zNEw1MTIgNTcyLjMzeiIvPjwvc3ZnPg==')  0 0/100% 100% no-repeat;"[39m
          [36m/>[39m
        [36m</taro-view-core>[39m
      [36m</taro-view-core>[39m
      [36m<div[39m
        [33mclass[39m=[32m"nut-cascader "[39m
      [36m>[39m
        [36m<taro-view-core[39m
          [33mclass[39m=[32m"nut-tabs nut-tabs-horizontal"[39m
        [36m>[39m
          [36m<taro-scroll-view-core[39m
            [33mclass[39m=[32m"nut-tabs-titles nut-tabs-titles-line nut-tabs-titles-scrollable taro-scroll-view__scroll-x"[39m
            [33menable-flex[39m=[32m"true"[39m
            [33mid[39m=[32m"nut-tabs-titles-4"[39m
            [33mscroll-left[39m=[32m"0"[39m
            [33mscroll-top[39m=[32m"0"[39m
            [33mscroll-with-animation[39m=[32m"false"[39m
            [33mscroll-x[39m=[32m"true"[39m
            [33mscroll-y[39m=[32m"false"[39m
            [33mshow-scrollbar[39m=[32m"false"[39m
          [36m>[39m
            [36m<taro-view-core[39m
              [33mclass[39m=[32m"nut-tabs-list"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"nut-tabs-titles-item nut-tabs-titles-item-active"[39m
              [36m>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"nut-tabs-titles-item-text"[39m
                [36m>[39m
                  [0m请选择[0m
                [36m</span>[39m
                [36m<span[39m
                  [33mclass[39m=[32m"nut-tabs-titles-item-line"[39m
                [36m/>[39m
              [36m</div>[39m
            [36m</taro-view-core>[39m
          [36m</taro-scroll-view-core>[39m
          [36m<taro-view-core[39m
            [33mclass[39m=[32m"nut-tabs-content-wrap"[39m
          [36m>[39m
            [36m<taro-view-core[39m
              [33mclass[39m=[32m"nut-tabs-content"[39m
              [33mstyle[39m=[32m"transform: translate3d(-0%, 0, 0); transition-duration: 300ms;"[39m
            [36m>[39m
              [36m<div[39m
                [33mclass[39m=[32m"nut-tabpane active"[39m
              [36m>[39m
                [36m<taro-scroll-view-core[39m
                  [33mclass[39m=[32m"nut-cascader-pane taro-scroll-view__scroll-y"[39m
                  [33mscroll-y[39m=[32m"true"[39m
                [36m>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m浙江[0m
                    [36m</div>[39m
                  [36m</div>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"disabled nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m湖南[0m
                    [36m</div>[39m
                  [36m</div>[39m
                  [36m<div[39m
                    [33mclass[39m=[32m"nut-cascader-item"[39m
                  [36m>[39m
                    [36m<div[39m
                      [33mclass[39m=[32m"nut-cascader-item-title"[39m
                    [36m>[39m
                      [0m福建[0m
                    [36m</div>[39m
                  [36m</div>[39m
                [36m</taro-scroll-view-core>[39m
              [36m</div>[39m
            [36m</taro-view-core>[39m
          [36m</taro-view-core>[39m
        [36m</taro-view-core>[39m
      [36m</div>[39m
    [36m</taro-view-core>[39m
  [36m</div>[39m
[36m</body>[39m"
`;
